--- a/rn.html
+++ b/rn.html
@@ -116,7 +116,7 @@
   				<p class="lead">This is a mobile application that helps to keep track of utility usages for electricity, water and gas. Users can set daily reminders at a specific
           timing to record the utility meter readings in the app. The app helps to visualise the daily usages so users can see when there is an increase in their usage. It also
           helps users to organise their utility bills by allowing them to <span class="u--highlight" id="smaller-highlight">take photos of their bills</span> and inputing its month and year so the app can organise it in order. It makes use
-          of <span class="u--highlight" id="smaller-highlight">react redux</span> to persist information and the images are stored in the local storage using <span class="u--highlight" id="smaller-highlight">Expo's localSystem API</span>.
+          of <span class="u--highlight" id="smaller-highlight">React Redux</span> to persist information and the images are stored in the local storage using <span class="u--highlight" id="smaller-highlight">Expo's localSystem API</span>.
           Push notifications are also generated using Expo's API.</p>
           <h5 class="font-weight-light">Check out the repository for it here:</h5>
   				<div style="height:10px"></div>
