--- a/suzhou.html
+++ b/suzhou.html
@@ -115,17 +115,16 @@
 				with case-study assignments which required us to study various types of businesses and present it to the class as groups. After the trip,
         we also had to do a comprehensive 9 to 10 page final report on the topic of <span class="u--highlight" id="smaller-highlight">'The rise
           of China' where we focused on any of the 3 areas of
-        China's soft power, 'A New World Order' or 'community with a shared future for mankind', a concept delivered by former
+        'China's soft power', 'A New World Order' or 'community with a shared future for mankind', a concept delivered by former
         Chinese Communist Party general secretary Hu Jintao and advocated by current general secretary Xi Jinping.</span></p>
 				<p class="lead">We were given opportunities to go on industrial visits to places like the Huawei R&D centre, Bank of China HQ in Suzhou,
 				Dream Village in Hangzhou and other tech companies. There we were exposed to how China is developing technology to become
 				the next tech leader of the world and how they believe it can help them acheive sustainable economic growth. It was indeed
-				an eye-opening experience for me. Besides the industrial visits where I felt how technologically advanced Shanghai, Suzhou and Hangzhou were,
-				through our daily lives, I could also experience it. There were many autonomous robots in their shopping malls serving customers
-				before they entered the restaurants, e-payments through Alipay was so common that even the metro could be paid using that. Although many
+				an eye-opening experience for me. I also experienced how technologically advanced Shanghai, Suzhou and Hangzhou were
+				through daily life. There were many autonomous robots in their shopping malls serving customers
+				before they entered the restaurants, e-payments through Alipay were so common that even the metro tickets could be paid using that. Although many
 				applications like Google Maps etc were blocked there, I managed to use the applications that the locals used and was also
-				pleasantly surprised that the user experience was great and I would say comparable or even better than the applications I used
-				back in Singapore without the firewall.</p>
+				pleasantly surprised that the user experience was great and I would say comparable or even better than the applications I usually used.</p>
 				<p class="lead">We were also exposed to the Chinese culture there. We did Chinese painting on fans, visited museums
 				and went to view and learn about the unique Chinese Garderns there. I believe Suzhou and Hangzhou is like the 'Kyoto'
 				of China. The city of Suzhou were I spent most of my days in was beautifully planned such that there were many old but
