--- a/suzhou.html
+++ b/suzhou.html
@@ -130,7 +130,7 @@
 				of China. The city of Suzhou were I spent most of my days in was beautifully planned such that there were many old but
 				well-maintained Chinese architecture
 				which gave the cities a very calming and refreshing vibe. The cities were also very clean and green. The people we
-				met there were also very friendly and hospitable. I believe a visit to Shanghai, Suzhou or Hangzhou will greatly broaden their minds about the place
+				met there were also very friendly and hospitable. I believe a visit to Shanghai, Suzhou or Hangzhou will greatly broaden people's minds about the place
 				and its people. Do contact me if you are interested to learn more about the trip and this module CH2393 which is the module
 				that offers this winter program.</p>
 				</div>
