added new details on y3s2 internship

--- a/experience.html
+++ b/experience.html
@@ -86,6 +86,24 @@
 								</div>
               </div>
 						</div>
+            <div class="row">
+							<div class="col-sm">
+								<div class="card card__page" style="width: 18rem;">
+									<img src="images/dsta.png" class="card-img-top" alt="Education" height="212">
+									<div class="card-body">
+										<h5 class="card-title">Y3 Semester 2 Internship</h5>
+										<p class="card-text">My experience interning at DSTA in Jan-Jun 2021 for 6 months.</p>
+										<a href="dsta.html" class="btn btn-primary">Learn more</a>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm">
+
+							</div>
+              <div class="col-sm">
+
+              </div>
+						</div>
 					</div>
 				</div>
 			</div>
