--- a/illuminatesg.html
+++ b/illuminatesg.html
@@ -8,7 +8,6 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
 <html>
     <head>
         <title>My Webpage</title>
@@ -61,42 +60,42 @@
 				</ol>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img style="height:700px" src="images/illuminatesg.jpg" class="d-block w-100" alt="...">
+						<img data-enlargeable style="cursor: zoom-in; height:700px" src="images/illuminatesg.jpg" class="d-block w-100" alt="...">
 						<div class="carousel-caption d-none d-md-block">
 							<h5>The Team behind the events</h5>
 							<p>A part of the entire team.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img style="height:700px" src="images/ei1.jpg" class="d-block w-100" alt="...">
+						<img data-enlargeable style="cursor: zoom-in; height:700px" src="images/ei1.jpg" class="d-block w-100" alt="...">
 						<div class="carousel-caption d-none d-md-block">
 							<h5>Common Space Series 1: Education Inequality</h5>
 							<p>All our amazing participants with the team.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img style="height:700px" src="images/ei5.jpg" class="d-block w-100" alt="...">
+						<img data-enlargeable style="cursor: zoom-in; height:700px" src="images/ei5.jpg" class="d-block w-100" alt="...">
 						<div class="carousel-caption d-none d-md-block">
 							<h5>Common Space Series 1: Education Inequality</h5>
 							<p>Our guest from the Children's wishing well.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img style="height:700px" src="images/mh1.JPG" class="d-block w-100" alt="...">
+						<img data-enlargeable style="cursor: zoom-in; height:700px" src="images/mh1.JPG" class="d-block w-100" alt="...">
 						<div class="carousel-caption d-none d-md-block">
 							<h5>Common Space Series 2: Mental Health</h5>
 							<p>All our amazing participants with the team.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img style="height:700px" src="images/event1.JPG" class="d-block w-100" alt="...">
+						<img data-enlargeable style="cursor: zoom-in; height:700px" src="images/event1.JPG" class="d-block w-100" alt="...">
 						<div class="carousel-caption d-none d-md-block">
 							<h5>Common Space Series 2: Mental Health</h5>
 							<p>Having our focus group discussions.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img style="height:700px" src="images/mh2.JPG" class="d-block w-100" alt="...">
+						<img data-enlargeable style="cursor: zoom-in; height:700px" src="images/mh2.JPG" class="d-block w-100" alt="...">
 						<div class="carousel-caption d-none d-md-block">
 							<h5>Common Space Series 2: Mental Health</h5>
 							<p>Our project director teaching about the moral matrix.</p>
@@ -119,22 +118,18 @@
 				<p class="lead">IlluminateSG is a project under Social Impact Catalyst NUS which is a club that focuses on
           <span class="u--highlight" id="smaller-highlight">social entrepreneurship</span>.
 				Our aim as IlluminateSG is to spark meaningful conversations on pressing social issues amongst youths in Singapore. Currently, we have
-				organised 2 of our flagship events called 'Common Space' where we bring together different people and guest experts to share on certain topics.
-				The topics of the 2 'Common Space' events were <span class="u--highlight" id="smaller-highlight">'Education Inequality','Mental Health' and 'Migrant Workers'</span>.</p>
-				<p class="lead">We are still exploring how we can ensure that our events are sustainable through a revenue stream such that our project can work
-				more like a social enterprise and further our cause. We are currently under a grant by the National Youth Council under the Young Change Makers
-				program.</p>
-				<p class="lead">I am part of the <span class="u--highlight" id="smaller-highlight">Marketing team where I am the head of content creation
+				organised 5 of our flagship events called 'Common Space' where we bring together different people and guest experts to share on certain topics.
+				The topics of the past 'Common Space' events were <span class="u--highlight" id="smaller-highlight">'Education Inequality','Mental Health', 'Migrant Workers', 'Racism'
+        and 'Socioeconomic Inequality'</span>.</p>
+				<p class="lead">We were previously under a grant by the National Youth Council under the Young Change Makers
+				program and have partnered with many distinguished guests and organisations for our events.</p>
+				<p class="lead">I am serving as the <span class="u--highlight" id="smaller-highlight">Marketing Head
         </span>. I overlook specifically at the content we create
 				for our social media sites,
 				our website where we share blogs and our marketing material for our events like posters and banners. I also do designs for our Instagram posts.
         I am incredibley delighted to be working with
-				amazing group mates, especially the marketing team that is filled with talented individuals. Although we have our positions, we work on a flat
-				hierarchy so that everyone is able to comfortably voice out opinions and be part of decision making. My marketing team mates include Raihana, a year 4 NUS
-				Business Marketing student who is also our head of public relations and marketing, Samihah, a year 3 NUS Political Science student who is a writer for our website blogs,
-        Tze Min, a year 3 NUS Business Analytics student who is another writer for our website blogs,
-				Wei Ming, a year 2 NUS Computer Science student who is in charge of our website and graphic design as well as Darima, a year 3 NUS Social Science student who
-        is a designer for our social media sites.</p>
+				amazing group mates, especially the marketing team that is filled with talented and diverse individuals. Our team is made up of youth
+        from various academic, racial, religious backgrounds that have all come together for a good cause.</p>
 				<h5 class="font-weight-light">Connect with us and checkout more of our work here:</h5>
 				<div style="height:10px"></div>
 
@@ -156,4 +151,5 @@
 			</div>
 		</div>
     </body>
+    <script type="text/javascript" src="scripts/img-fullscreen.js"></script>
 </html>
