--- a/pythonweb.html
+++ b/pythonweb.html
@@ -52,7 +52,7 @@
           <p class="lead" style="margin-bottom:30px;">These are projects that I started on when doing the course CS50 Web Programming with Python and Javascript by Harvard on EdX which focuses
           on the Flask and Django frameworks.</p>
           <h3 class="font-weight-light" style="text-align:center; margin-bottom:30px;"><span class="u--highlight" id="smaller-highlight">Simple Book Review</span></h3>
-          <img style="height:600px" src="images/bookreview.png" class="d-block w-100" alt="...">
+          <img data-enlargeable style="height:600px" src="images/bookreview.png" class="d-block w-100" alt="...">
   				<!--description-->
   				<p class="lead">This is a book review web application that allows users to login and make book reviews and rate books that they have read or find information on
           books. The app makes use of some <span class="u--highlight" id="smaller-highlight">APIs like GoogleBooks, Goodreads, Open Library</span> to retrieve book informations.
@@ -65,7 +65,7 @@
   					<a class="fa fa-github fa-lg" style="user-select: auto;" href="https://github.com/kangyeelim/simplebookreviews"></a>
   				</div>
           <h3 class="font-weight-light" style="text-align:center; margin-bottom:30px; margin-top:30px;"><span class="u--highlight" id="smaller-highlight">FlaskSlack</span></h3>
-          <img style="height:600px" src="images/flack.png" class="d-block w-100" alt="...">
+          <img data-enlargeable style="height:600px" src="images/flack.png" class="d-block w-100" alt="...">
   				<!--description-->
   				<p class="lead">This is a simple chat application similar to slack. Once a user creates a username, it allows users to join any chat rooms available or to
           create a new chat room. The chatroom would update in real time when new users join and load the previous 100 messages. It also saves the state of the web app such
@@ -79,7 +79,7 @@
   					<a class="fa fa-github fa-lg" style="user-select: auto;" href="https://github.com/kangyeelim/flaskslack"></a>
   				</div>
           <h3 class="font-weight-light" style="text-align:center; margin-bottom:30px; margin-top:30px;"><span class="u--highlight" id="smaller-highlight">Restaurant Site</span></h3>
-          <img style="height:600px" src="images/menu.png" class="d-block w-100" alt="...">
+          <img data-enlargeable style="height:600px" src="images/menu.png" class="d-block w-100" alt="...">
   				<!--description-->
   				<p class="lead">This is a website that allows customers to place personalised orders on food. It has an admin page for
           the restaurant owner to access and check orders and update orders as well. This website is made using the <span class="u--highlight" id="smaller-highlight">Django</span>
@@ -95,4 +95,5 @@
 			</div>
 		</div>
     </body>
+    <script type="text/javascript" src="scripts/img-fullscreen.js"></script>
 </html>
