--- a/suzhou.html
+++ b/suzhou.html
@@ -67,28 +67,28 @@
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img style="height:700px" src="images/shnight.jpg" class="d-block w-100" alt="...">
+						<img data-enlargeable style="height:700px" src="images/shnight.jpg" class="d-block w-100" alt="...">
 						<div class="carousel-caption d-none d-md-block">
 							<h5>Nightview of Shanghai</h5>
 							<p>Scenic view at The Bund, along HuangPu river.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img style="height:700px" src="images/suzhoumuseum.jpg" class="d-block w-100" alt="...">
+						<img data-enlargeable style="height:700px" src="images/suzhoumuseum.jpg" class="d-block w-100" alt="...">
 						<div class="carousel-caption d-none d-md-block">
 							<h5>The Suzhou Musuem</h5>
 							<p>Full of Chinese history and artifacts.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img style="height:700px" src="images/nusriblg.jpg" class="d-block w-100" alt="...">
+						<img data-enlargeable style="height:700px" src="images/nusriblg.jpg" class="d-block w-100" alt="...">
 						<div class="carousel-caption d-none d-md-block">
 							<h5>The NUSRI campus</h5>
 							<p>Where we had studies on Chinese business enterprises and management.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img style="height:700px" src="images/hwrd.jpg" class="d-block w-100" alt="...">
+						<img data-enlargeable style="height:700px" src="images/hwrd.jpg" class="d-block w-100" alt="...">
 						<div class="carousel-caption d-none d-md-block">
 							<h5>The Huawei Research and Development Centre, Suzhou</h5>
 							<p>Where we learnt about Huawei's business strategy and plans.</p>
@@ -137,4 +137,5 @@
 			</div>
 		</div>
     </body>
+    <script type="text/javascript" src="scripts/img-fullscreen.js"></script>
 </html>
