--- a/tP.html
+++ b/tP.html
@@ -49,7 +49,7 @@
 			<div class="card border-0 shadow my-5">
 				<div class="card-body p-5">
           <h1 class="font-weight-light" style="text-align:center"><span class="u--highlight">treasurerPro Desktop App</span></h1>
-          <img style="height:700px" src="images/tP.png" class="d-block w-100" alt="...">
+          <img data-enlargeable style="height:700px" src="images/tP.png" class="d-block w-100" alt="...">
   				<p class="lead">This is a project I did with 4 other team mates in the <span class="u--highlight" id="smaller-highlight">Software Engineering
              module CS2103T</span>. We were tasked
           to create a command line interface application using <span class="u--highlight" id="smaller-highlight">Java and JavaFX</span>
@@ -67,4 +67,5 @@
 			</div>
 		</div>
     </body>
+    <script type="text/javascript" src="scripts/img-fullscreen.js"></script>
 </html>
