--- a/dso.html
+++ b/dso.html
@@ -49,7 +49,7 @@
 			<div class="card border-0 shadow my-5">
 				<div class="card-body p-5">
           <h1 class="font-weight-light" style="text-align:center; margin-bottom:30px;"><span class="u--highlight">DSO Internship Experience</span></h1>
-          <img style="height:600px; margin-bottom:50px;" src="images/dsoreport.png" class="d-block w-100" alt="...">
+          <img data-enlargeable style="cursor: zoom-in; height:600px; margin-bottom:50px;" src="images/dsoreport.png" class="d-block w-100" alt="...">
   				<p class="lead">I had the opportunity to intern in DSO in my year 1 summer vacation period where I worked in a team under the
             Electronic Systems division, under a project called Accelerating Compute Intensive Signal Processing Algorithms. I worked to convert
             signal processing algorithms that the research team had done in <span class="u--highlight" id="smaller-highlight">MATLAB to C++</span>
@@ -87,4 +87,5 @@
 			</div>
 		</div>
     </body>
+    <script type="text/javascript" src="scripts/img-fullscreen.js"></script>
 </html>
