--- a/react.html
+++ b/react.html
@@ -52,7 +52,7 @@
           <p class="lead" style="margin-bottom:30px;">These are projects that I started on when I started my self-learning journey on web application development using the
           React framework.</p>
           <h3 class="font-weight-light" style="text-align:center; margin-bottom:30px;"><span class="u--highlight" id="smaller-highlight">Fanclub Community</span></h3>
-          <img style="height:600px" src="images/fan.png" class="d-block w-100" alt="...">
+          <img data-enlargeable style="height:600px" src="images/fan.png" class="d-block w-100" alt="...">
   				<!--description-->
   				<p class="lead">This is a fanclub community website that allows users to sign in using their Google account to make posts in the Community Tab so that they can
             buy, sell or share merchandise related to the artist. To identify people as true fans, they can take a quiz which upon completion allows them to input their
@@ -75,4 +75,5 @@
 			</div>
 		</div>
     </body>
+    <script type="text/javascript" src="scripts/img-fullscreen.js"></script>
 </html>
