--- a/rn.html
+++ b/rn.html
@@ -83,22 +83,22 @@
   				</ol>
   				<div class="carousel-inner">
   					<div class="carousel-item active">
-              <img class="center" style="height:600px; max-width:300px; margin-left:auto; margin-right:auto;" src="images/ut1.png" alt="...">
+              <img data-enlargeable class="center" style="height:600px; max-width:300px; margin-left:auto; margin-right:auto;" src="images/ut1.png" alt="...">
   						<div class="carousel-caption d-none d-md-block">
   						</div>
   					</div>
   					<div class="carousel-item">
-              <img class="center" style="max-height:600px; max-width:300px; margin-left:auto; margin-right:auto;" src="images/ut2.jpg" alt="...">
+              <img data-enlargeable class="center" style="max-height:600px; max-width:300px; margin-left:auto; margin-right:auto;" src="images/ut2.jpg" alt="...">
   						<div class="carousel-caption d-none d-md-block">
   						</div>
   					</div>
   					<div class="carousel-item">
-              <img class="center" style="max-height:600px; max-width:300px; margin-left:auto; margin-right:auto;" src="images/ut3.jpg" alt="...">
+              <img data-enlargeable class="center" style="max-height:600px; max-width:300px; margin-left:auto; margin-right:auto;" src="images/ut3.jpg" alt="...">
   						<div class="carousel-caption d-none d-md-block">
   						</div>
   					</div>
   					<div class="carousel-item">
-              <img class="center" style="background-color:#f7f7f7;max-height:600px; max-width:300px; margin-left:auto; margin-right:auto;" src="images/ut4.jpg" alt="...">
+              <img data-enlargeable class="center" style="background-color:#f7f7f7;max-height:600px; max-width:300px; margin-left:auto; margin-right:auto;" src="images/ut4.jpg" alt="...">
   						<div class="carousel-caption d-none d-md-block">
   						</div>
   					</div>
@@ -128,4 +128,5 @@
 			</div>
 		</div>
     </body>
+    <script type="text/javascript" src="scripts/img-fullscreen.js"></script>
 </html>
