--- a/projects.html
+++ b/projects.html
@@ -95,6 +95,19 @@
 									</div>
 								</div>
 							</div>
+              <div class="col-sm">
+								<div class="card card__page" style="width: 18rem;">
+									<img src="images/nerdspace1.png" class="card-img-top" alt="Nerdspace" height="165px">
+									<div class="card-body">
+										<h5 class="card-title">Nerdspace</h5>
+										<p class="card-text">A web application to find study buddies and communities.</p>
+										<a href="nerdspace.html" class="btn btn-primary">Learn more</a>
+									</div>
+								</div>
+							</div>
+              <div class="col-sm">
+
+							</div>
 						</div>
 					</div>
 				</div>
